--- a/frontend/src/css/AboutUs.scss
+++ b/frontend/src/css/AboutUs.scss
@@ -3,7 +3,7 @@
     position: relative;
     // top: 56px;
     // height: 500px;
-    margin-top: 50px;
+    margin-top: 10vh;
 }
 .swiper{
     height: 100%;
