--- a/frontend/src/css/Navigation.css
+++ b/frontend/src/css/Navigation.css
@@ -5,5 +5,5 @@
   background-color: black;
   opacity: 0.5;
   width: 100%;
-  height: 50px;
+  height: 10vh;
 }/*# sourceMappingURL=Navigation.css.map */
