--- a/frontend/src/css/Product.css
+++ b/frontend/src/css/Product.css
@@ -1,6 +1,9 @@
 .product {
   display: flex;
   flex-direction: column;
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
 }
 .product__img {
   padding: 30px;
@@ -15,28 +18,23 @@
 .product__name {
   font-size: 1.7rem;
 }
-.product__description {
-  width: 70%;
-  display: -webkit-box;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-size: 0.9rem;
-  line-height: 1.5rem;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  margin: 0 auto;
-}
-.product__price {
-  position: relative;
-  margin: 0 auto;
-  font-size: 1.5rem;
-}
-.product__currency {
+.product__hover {
+  display: none;
   position: absolute;
+  width: 100%;
+  height: 100%;
   top: 0;
-  right: 150px;
-  font-size: 0.9rem;
-  margin-bottom: 8px;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.product:hover .product__hover {
+  display: block;
+}
+.product__btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .btn__add {
